# license-analyzer

./: .flake8  .gitignore  LICENSE  README.md  lint.sh  pyproject.toml
.github/workflows/: ci.yml
license_analyzer/: models.py  package.py  util.py
